2020/11/20 v057
	1. Fix the code editor with "|".

2020/11/19 v056
	1. The code editor support UTF-8 now.

2020/10/22 v55
	1. The CodeEditor is improved, undo/redo is now all functional.

2020/07/12 v38
	1. The `__AsyncSingle__` can works for the class method and static method, for object method, each object can only have one coroutine running for the same method, for static method, for all objects, only on running coroutine is allowed.

2020/07/06 v37
	1. Fix some bugs in the child property and style system.
	2. Add override for the ui style properties, so the 'setAllPoints = true' settings will override the 'location' settings, they won't both work, that would cause conflict.
	3. __AsyncSingle__ attribute added for functions and methods, so the async function can only have one coroutine running at the same time.

2020/05/05 v36
	1. The Scorpio.UI & Scorpio.Widget Lib are finished.

2019/07/31
	1. Style Class system is fixed to support changes.

2019/07/30
	1. Remove the __Final__ attribute from the Scorpio class, so it can be inherited.

2019/07/29
	1. __Service__ is added used to mark the target method as an async service so it'd be automatically processed when the addon is loaded, and the system will try to re-process it if the process is dead as required.
	2. Scorpio.UI.Style system added.

2019/04/20
	1. Basic UI system finished.
	2. Basic UI style system finished.
	3. Fix a check in the task system, function with one argument may be treated as non-argument.
	4. Hook system is removed, since it's useless, we only need use secure hook system.

2018/07/27
	1. Add the missing code for cache recycle

2018/07/25
	1. Fix the OnSpecChanged event don't fire when player's spec is changed by the battlefield.

2018/07/21
	1. You can use Color.FromHSV(h, s, v) to generate color from HSV, or use color:ToHSV() to generate the hsv value.
	2. You can use Color.FromHSL(h, s, l) to generate color from HSL, or use color:ToHSL() to generate the hsl value.

2018/05/13