@@ -480,7 +480,10 @@ local function setCustomStyle(target, pname, value, stack, nodirectapply)
 
         if directapply then
             -- Instant apply custon settings, no need queue it
-            return applyStylesOnFrame(target, directapply)
+            _CurrentStyleTarget = target
+            local ok, err       = pcall(applyStylesOnFrame, target, directapply)
+            if not ok then Error("[Scorpio.UI]Apply Style Failed: %s", tostring(err)) end
+            _CurrentStyleTarget = nil
         end
     end
 
@@ -1944,8 +1947,10 @@ function UIObject:InstantApplyStyle()
     _Recycle(wipe(children))
 
     -- Apply the style settings
+    _CurrentStyleTarget     = self
     local ok, err           = pcall(applyStylesOnFrame, self, styles)
     if not ok then Error("[Scorpio.UI]Apply Style: %s - Failed: %s", debugname, tostring(err)) end
+    _CurrentStyleTarget     = nil
 end
 
 -- Get the child property name of the frame if it's generated by the property
