@@ -1,7 +1,7 @@
 ## Interface: 90002
 ## Title: [Lib] Scorpio
 ## Author: kurapica125@outlook.com
-## Version: v058
+## Version: v059
 ## Notes: Scorpio Addon FrameWork
 ## URL: http://github.com/kurapica/Scorpio
 ## Dependencies: PLoop
